fixed edit button appearing on timelines that are not the users, fixed image scaling for recent photos, set dummy images for recent photos and new user image, hid modal popup on profile page, fixed z-index on modal for event edit page, added overflow properties to suggested friends box

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -238,6 +238,7 @@ svg:hover {
     border-radius: 15px 15px 0px 0px;
     padding-top: 30px;
     border: 1px solid var(--bordercolor);
+    overflow: hidden; 
 }
 
 .mayKnow {
@@ -542,6 +543,7 @@ svg:hover {
     align-items: center;
     padding: 5px 0px 0px 0px;
     cursor: pointer;
+    margin-right: 10px;
 }
 
 .comments,
@@ -593,8 +595,18 @@ svg:hover {
     border-radius: 3px;
 }
 
+.smallMediaContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 170px;
+    max-width: 245px;
+    overflow: hidden;
+}
+
 .recentMediaSmall {
-    width: 100%;
+    max-height: 300px;
+    max-width: 300px;
 }
 
 .recentCard:hover,
@@ -739,7 +751,7 @@ svg:hover {
     width: 100%;
     min-height: 1300px;
     background-color: rgba(0, 0, 0, 0.534);
-    z-index: 3;
+    z-index: 4;
 }
 
 .hidden {
@@ -1082,8 +1094,8 @@ svg:hover {
 
     .notifEvent {
         margin-bottom: 20px;
-        width: 300px;
-        padding: 0px;
+        width: 270px;
+        padding-left: 30px;
     }
 
     .commentModal,
